# yt2llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-23-yt2llm-index.md  2026-05-23-yt2llm-phase-1-foundations.md  2026-05-23-yt2llm-phase-2-deterministic-stages.md  2026-05-23-yt2llm-phase-3-api-stages.md  2026-05-23-yt2llm-phase-4-orchestrator-cli.md
docs/superpowers/specs/: 2026-05-23-yt2llm-design.md
scripts/: pytest_fast_hook.py
src/yt2md/: __init__.py  __main__.py  cache.py  cli.py  config.py  costs.py  errors.py  ffmpeg_preflight.py  logging_config.py  models.py  pipeline.py  runs_log.py  vocab_hint.py
src/yt2md/prompts/: __init__.py  structure.md
src/yt2md/stages/: __init__.py  chunk.py  clean.py  compress.py  download.py  render.py  structure.py  transcribe.py  write.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli_end_to_end.py  test_pipeline_happy_path.py  test_pipeline_observability.py
tests/live/: test_live_download.py  test_live_structure_gemini.py  test_live_transcribe_openai.py
tests/unit/: test_cache_fingerprint.py  test_cache_helper.py  test_cache_paths.py  test_chunk_split.py  test_chunk_stitch.py  test_clean_fillers.py  test_clean_property.py  test_clean_skeleton.py  test_clean_speaker_collapse.py  test_cli.py  test_cli_idempotency.py  test_cli_regen.py  test_compress.py  test_config_defaults.py  test_config_precedence.py  test_costs_gemini.py  test_costs_transcription.py  test_download_adapter.py  test_download_call.py  test_download_error_mapping.py  test_errors.py  test_ffmpeg_preflight.py  test_fixture_loading.py  test_local_backend.py  test_logging_config.py  test_models_frontmatter.py  test_models_items.py  test_models_metadata.py  test_models_structured_doc.py  test_models_transcript.py  test_openai_backend_adapter.py  test_openai_backend_call.py  test_render_detailed.py  test_render_golden.py  test_render_sections.py  test_render_skeleton.py  test_render_takeaways.py  test_render_transcript.py  test_runs_log.py  test_structure_call.py  (+13 more)
(+11 files in other folders)
