[project]
name = "yt2llm"
version = "0.0.1"
description = "Turn YouTube videos into structured markdown for an LLM knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.3",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "yt-dlp>=2024.5.27",
    "openai>=1.30",
    "google-genai>=0.3",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]

[project.scripts]
yt2md = "yt2md.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt2md"]

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle — docstrings not required everywhere
    "COM812", # conflicts with formatter
    "ISC001", # conflicts with formatter
    "FIX",    # allow TODO/FIXME during dev
    "TD",     # ditto
    "ANN101", # self type annotation
    "ANN102", # cls type annotation
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 8
max-statements = 30
max-returns = 6
max-locals = 15
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN", "PLR0915"]
"src/yt2md/prompts/**" = ["E501"]
"src/yt2md/templates/**" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit real external APIs (require keys)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/yt2md"]
omit = ["src/yt2md/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
